--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -20,7 +20,6 @@
               top:50px;
    @include desktop{
      display: none;
-
    }
             }
       &:hover {
@@ -135,5 +134,30 @@
         }
       }
     }
+  }
+}
+
+/* toggle state */
+.menu-item-has-children {
+  &::after {
+    transition: 0.5s;
+    content: '\f078';
+    font-family: Font Awesome\ 5 Free;
+    font-weight: 900;
+    right: 2em;
+    color: white;
+    top: 30%;
+    font-size: 24px;
+    position: absolute;
+    @include desktop {
+      display: none;
+    }
+  } // &::after
+} // .menu-item-has-children
+
+.menu-active {
+  &::after {
+    transform: rotate(180deg);
+    top: 0;
   }
 }
