--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -2,51 +2,40 @@
 # 404 Page
 --------------------------------------------------------------*/
 .page-template-404{
-    .site-content{
-        padding:0;
-           
-        .container-404{
-            // background: rgb(138, 138, 192);
-            // display: flex;
-            // justify-content: center;
-            // align-content: center;
-            // align-items: center;
-display: flex;
+    // .site-content{
+    .container-404{
+    display: flex;
+//     flex-direction: column;
+//     .error-container{
+//                 max-width: 950px;
+//                        background: url(../../assets/images/output-onlinepngtools.png);
 
-    flex-direction: row;
-.search-girl{
-    width: 50%;;
-    img{
-        width: 100%;
-        object-fit: cover;
-        object-position: -11px;
-
-    }
-
-}
-            // background: url(../../assets/images/output-onlinepngtools.png);
-//                 background-size: contain;
 //                 background-repeat: no-repeat;
-//                 width: 40%;
-       
-//     height: 100vh;
-
-// }
+// display: flex;
+// justify-content: flex-end;
+//     background-position: bottom;
+//     background-position-y: 91%;
+//     height: 665px;
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     width: 50%;
+ 
 .error-text{
-    width: 60%;
-    
+order:2;
+width: 60%;
+}
+.search-girl{
+    order:1;
+    width:40%;
+    img{
+        max-width: 100%;
+    }
+
 }
 
+    }//end of .container-404
 
-       
-        }
     }
-    }
-
-
-
-
-
 
 
 
@@ -63,6 +52,7 @@ display: flex;
 .post-223{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     
 //1      
 .entry-header{
@@ -76,18 +66,27 @@ width: 100%;
         height: 100vh;
     }
     }
-
+.post-navigation{
+    width: 100%;
+}
 }
 
 
 //2
 .entry-content{
-    padding: 2rem;
+    
 
-
+padding:2em;
+@include desktop{
+    display: flex;
+    flex-direction: column;
+  
+    padding-left:8em;
+}
 
     //1
     .entry-title{
+            line-height: 1.2em;
         .entry-meta{
             font-size:1.2rem;
             color: #A7A3D6;
@@ -102,15 +101,27 @@ width: 100%;
     }
     //1
     .entry-main{
-
+@include desktop{
+    padding:2rem;
+      width:60%;
+}
 
         .post-quote{
              color: $credible__blue;
              padding: 2px;
-
+ line-height: 2em;
 font-size: 1.2rem;
             font-weight: bold;
             font-style: italic;
+
+               @include tablet{
+              font-size:2rem;
+
+              @include desktop{
+                  line-height: 2em;
+font-size: 2rem;
+              }
+          }
         }
 
 
@@ -131,7 +142,9 @@ font-size: 1.2rem;
     }
 
 
-
+p{
+    line-height: 1.8rem;
+}
 
 
 
@@ -152,6 +165,7 @@ font-size: 1.2rem;
     }
 
       .post-quote{
+       
           &::before{
                content: '\f10d';
                    font-family: Font Awesome\ 5 Free;
@@ -201,8 +215,10 @@ header{
 
     //post-223
     .post-223{
-    
-        padding: 2em;;
+        padding: 4em;
+     .post-blog{
+
+        padding: 2em;
         border: 1px solid #d7d0f2;
         box-shadow: 0 2px 2px #42299a;
         border: 10px;
@@ -211,13 +227,28 @@ header{
             img{
                 width: 100%;
                 object-fit: cover;
+                    height: 100%;
             }
         }
     }
+
+}
+.posted-on{
+    font-size: 1.2rem;
+    color: #a7a3d6;
+    font-weight: 700;
+
+}
+h3, .read-more-button{
+color: $credible__blue;
 }
 
+.read-more-button{
+    font-size: 1.5rem;
+}
+.read-more-{
+    text-align: right;
+}
 
-
-
-
+    }
     }
