--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -4,7 +4,6 @@
 
 /* Main Content Section */
 .single-content {
-  position: relative;
   .main-image {
     width: 100%;
     order: 1;
@@ -40,19 +39,20 @@
 
 .report-button {
   height: 60px;
-  width: 181px;
+  margin-left: 3px;
   border: 2px solid #48209f;
   border-radius: 6px;
   padding: 10px;
   background: $white;
 }
 
-/* charity page */ 
+/* charity page */
 .single-charity {
   .site-content {
     display: flex;
     flex-direction: column;
     padding: 0;
+
     article {
       .charity-header {
         text-align: center;
@@ -62,7 +62,10 @@
           img {
             object-fit: cover;
             width: 100%;
-            height: 35vh;
+            height: 40vh;
+            @include tablet {
+              height: 60vh;
+            }
             @include desktop {
               height: 100vh;
             }
@@ -98,6 +101,7 @@
         margin-top: 45px;
         display: flex;
         flex-direction: column;
+
         .entry-title {
           text-align: center;
           font-size: 25px;
@@ -124,39 +128,31 @@
           }
         }
         .charity-description {
-          font-style: normal;
-          margin-left: auto;
-          margin-right: auto;
-          font-family: Montserrat, sans-serif;
-          font-size: 16px;
-          font-weight: 300;
-          line-height: 33px;
-          text-align: center;
-          padding: -6px;
-          @include desktop {
-            width: 800px;
-            font-size: 30px;
+          p {
+            font-style: normal;
+            margin-left: auto;
+            margin-right: auto;
+            font-family: Montserrat, sans-serif;
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 33px;
+            text-align: center;
+            padding: -6px;
+            @include desktop {
+              width: 800px;
+
+              line-height: 2.4rem;
+              font-size: 18px;
+            }
           }
         }
         .charity-video {
           text-align: center;
-          position: relative;
-          padding-bottom: 56.25%;
-          padding-top: 30px;
-          height: 0;
-          @include desktop {
-            margin: auto;
-            width: 800px;
-          }
-          iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-        
-          }
+          height: 100%;
+          text-align: center;
+          height: 100%;
+          display: flex;
+          justify-content: center;
         }
         .main-content {
           display: flex;
@@ -171,8 +167,16 @@
               flex-direction: row;
             }
             .main-image {
+              text-align: center;
+              position: relative;
               img {
                 width: 100%;
+                @include tablet {
+                  width: 70%;
+                }
+                @include desktop {
+                  width: 80%;
+                }
               }
             }
             .content-w-image {
@@ -182,8 +186,6 @@
                 margin-bottom: 2em;
                 margin-top: 2em;
               }
-            
-        
             }
           }
           .h3-title {
@@ -198,44 +200,51 @@
       }
     }
   }
-  .browse-charities-title {
-    text-align: center;
-    color: $credible__blue;
+}
 
-    font-size: 28px;
-    font-weight: bold;
-    line-height: 31px;
-  }
-  .charities-caresole {
-    max-width: 225px;
-    .flickity-viewport {
-    }
-  }
-  .browse_charities_button {
-  }
-  .custom-plan {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 3rem;
-    padding: 2rem 6rem;
-    text-align: center;
-  }
+.custom-plan {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 3rem;
+  padding: 2rem 6rem;
+  text-align: center;
 }
 
 /* individual part */
 
 .single-charity {
-  .chimp-donate-form {
-    margin-top: 3em;
-
-    display: flex;
-
-    margin: auto;
-    justify-content: center;
-    padding: 16px;
-    width: 7em;
+  .button-no-image {
+    text-align: center;
   }
+  h3 {
+    text-align: center;
+  }
+  .content-wo-image {
+    @include tablet {
+      text-align: left;
+      padding-bottom: 2rem;
+    }
+
+    a {
+      text-align: center;
+    }
+  }
+}
+
+.browse-charities-title {
+  text-align: center;
+}
+.chimp-donate-form {
+  margin-top: 3em;
+
+  display: flex;
+
+  margin: auto;
+  justify-content: center;
+  padding: 16px;
+  width: 7em;
+  margin-top: 3rem;
 }
 
 .link-charity {
@@ -243,8 +252,91 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   @include desktop {
-    right: 56px;
-    bottom: 82px;
+  }
+}
+
+//custom plan
+.single-charity {
+  .custom-plan {
+    max-width: $max-content-size-mobile;
+    @include tablet {
+      max-width: 500px;
+    }
+    @include tablet-large {
+      max-width: $max-content-size;
+    }
+    @include desktop {
+      max-width: $max-content-size;
+    }
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    padding: 1rem;
+    @include tablet-large {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+    }
+    grid-gap: 2rem;
+    @include tablet {
+      grid-gap: 3rem;
+    }
+    text-align: center;
+    .single-custom-plan {
+      padding: 2rem 0;
+      grid-template-columns: 1fr;
+      grid-template-rows: 150px 70px 70px;
+      @include tablet {
+        height: 490px;
+        padding: 2rem 3rem;
+        grid-template-rows: 150px 50px auto 50px;
+      }
+
+      display: grid;
+
+      p {
+        display: none;
+        @include tablet {
+          display: block;
+        }
+      }
+      h3 {
+        @include font-size(1.125);
+        @include tablet {
+          @include font-size(1.3);
+        }
+      }
+      img {
+        height: 150px;
+        margin: 0 auto;
+        @include tablet-large {
+          height: 130px;
+        }
+        @include desktop {
+          height: 150px;
+        }
+      }
+      @include box-shadow();
+      button,
+      a {
+        background: $credible__blue;
+        &:hover {
+          box-shadow: 0px 2px 2px darken($credible__blue, 20%);
+          text-shadow: 1px 0.5px 1px white;
+        }
+        padding: $button__padding;
+        color: white;
+        font-weight: 600;
+        width: 12rem;
+        border: none;
+        box-shadow: none;
+        display: block;
+        margin: 0 auto;
+        @include font-size(1.3);
+        border-radius: 7px;
+      }
+    }
   }
 }
