--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -226,16 +226,16 @@ th {
 # Embedded Fonts
 --------------------------------------------------------------*/
 @font-face {
-  font-family: 'Gilroy';
-  src: url("Gilroy-Light.eot");
-  src: url("Gilroy-Light.eot?#iefix") format("embedded-opentype"), url("Gilroy-Light.woff2") format("woff2"), url("Gilroy-Light.woff") format("woff"), url("Gilroy-Light.ttf") format("truetype"), url("Gilroy-Light.svg#Gilroy-Light") format("svg");
+  font-family: 'Gilroy Light';
+  src: url("../../assets/gilroy-font/Gilroy-Light.eot");
+  src: url("../../assets/gilroy-font/Gilroy-Light.eot?#iefix") format("embedded-opentype"), url("../../assets/gilroy-font/Gilroy-Light.woff2") format("woff2"), url("../../assets/gilroy-font/Gilroy-Light.woff") format("woff"), url("../../assets/gilroy-font/Gilroy-Light.ttf") format("truetype"), url("../../assets/gilroy-font/Gilroy-Light.svg#Gilroy-Light") format("svg");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url("Gilroy-ExtraBold.eot");
-  src: url("Gilroy-ExtraBold.eot?#iefix") format("embedded-opentype"), url("Gilroy-ExtraBold.woff2") format("woff2"), url("Gilroy-ExtraBold.woff") format("woff"), url("Gilroy-ExtraBold.ttf") format("truetype"), url("Gilroy-ExtraBold.svg#Gilroy-ExtraBold") format("svg");
+  font-family: 'Gilroy Bold';
+  src: url("../../assets/gilroy-font/Gilroy-ExtraBold.eot");
+  src: url("../../assets/gilroy-font/Gilroy-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../../assets/gilroy-font/Gilroy-ExtraBold.woff2") format("woff2"), url("../../assets/gilroy-font/Gilroy-ExtraBold.woff") format("woff"), url("../../assets/gilroy-font/Gilroy-ExtraBold.ttf") format("truetype"), url("../../assets/gilroy-font/Gilroy-ExtraBold.svg#Gilroy-ExtraBold") format("svg");
   font-weight: 800;
   font-style: normal; }
 
@@ -266,7 +266,15 @@ p {
   margin: 1.5rem 0;
   line-height: 1.4rem; }
 
-@media (min-width: 600px) {
+.chimp-donate-form {
+  background: #00BEA8; }
+
+.main-navigation .menu-item-has-children {
+  position: relative; }
+  .main-navigation .menu-item-has-children > ul {
+    display: none; }
+
+@media (min-width: 1000px) {
   .main-navigation .menu-item-has-children {
     position: relative; }
     .main-navigation .menu-item-has-children .sub-menu {
@@ -526,27 +534,13 @@ body {
   background: white; }
 
 /* Chimp Donate Button */
-.chimp-donate-form {
-@media (min-width: 650px) {
-  .site-content {
-    padding: 2rem; } }
-
-@media (min-width: 1000px) {
-  .site-content {
-    padding: 5rem; } 
-  }
-}
-
-/* Chimp Donate Button */
 .chimp-donate-form, .donate-page-button {
   background-color: #00BEA8;
   font-size: 1.6rem;
   font-weight: 700;
   padding: 1.6rem 5.3rem;
   color: #192726;
-  border-radius: 8px;
-  margin-top: 10px; }
-
+  border-radius: 8px; }
 
 /*--------------------------------------------------------------
 # Page Templates
@@ -747,7 +741,7 @@ body {
       .page-template-page-how-it-works .site-content .entry-main h3 {
         display: unset;
         font-size: 2rem; } }
-  @media (min-width: 650px) {
+  @media (min-width: 600px) {
     .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child {
       position: relative; }
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:first-child {
@@ -792,12 +786,12 @@ body {
         -webkit-box-ordinal-group: unset;
             -ms-flex-order: unset;
                 order: unset; } }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p {
         margin-left: 1.7rem; } }
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:last-child {
     text-align: center; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:last-child {
         margin-left: 0; } }
   @media (min-width: 1000px) {
@@ -806,7 +800,7 @@ body {
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child,
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:last-child {
     display: none; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child,
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:last-child {
         display: unset; } }
@@ -1315,7 +1309,7 @@ ol.flickity-page-dots {
       left: 50%;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .single-charity .site-content article .charity-header .charity-logo-container {
           padding-left: 35px;
           padding-right: 35px;
@@ -1338,7 +1332,7 @@ ol.flickity-page-dots {
       text-align: center;
       font-size: 25px;
       color: #14225F; }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .single-charity .site-content article .entry-content .entry-title {
           font-size: 35px; } }
     .single-charity .site-content article .entry-content .amount-funded {
@@ -1489,25 +1483,6 @@ ol.flickity-page-dots {
           flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-<<<<<<< HEAD
-          justify-content: center; }
-
-.report-button {
-  height: 60px;
-  width: 181px;
-  border: 2px solid #48209F;
-  border-radius: 6px;
-  padding: 10px;
-  background: #fff; }
-
-.site-footer .footer-site-logo a .rcforward-logo {
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center; }
-
-.site-footer .footer-nav {
-  display: none; }
-=======
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1563,20 +1538,23 @@ ol.flickity-page-dots {
       margin: 2.3rem 0; }
   .site-footer .top-footer .footer-nav {
     display: none; }
-    .site-footer .top-footer .footer-nav .menu ul {
+    .site-footer .top-footer .footer-nav .menu-footer-menu-container ul {
       list-style: none; }
       @media (min-width: 1000px) {
-        .site-footer .top-footer .footer-nav .menu ul li:nth-child(5n) {
+        .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li:nth-child(5n) {
           display: none; }
-        .site-footer .top-footer .footer-nav .menu ul li {
+        .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li {
           margin: 2rem 0; }
-          .site-footer .top-footer .footer-nav .menu ul li a {
+          .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li a {
             color: #00BEA8; } }
     @media (min-width: 1000px) {
       .site-footer .top-footer .footer-nav {
         display: unset; } }
   .site-footer .top-footer .footer-info {
-    text-align: center; }
+    text-align: center;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
     @media (min-width: 1000px) {
       .site-footer .top-footer .footer-info {
         -webkit-box-ordinal-group: unset;
@@ -1612,6 +1590,9 @@ ol.flickity-page-dots {
           width: 70%;
           line-height: 2rem; } }
   .site-footer .top-footer .footer-info-sm {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1716,16 +1697,9 @@ ol.flickity-page-dots {
           height: 4rem;
           width: 4rem; } }
   .site-footer .bottom-footer .footer-copyright {
-<<<<<<< HEAD
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1; }
-=======
-    -webkit-box-ordinal-group: 5;
-        -ms-flex-order: 4;
-            order: 4; }
->>>>>>> f44818300e6d9d747ab2259b34815f4bf98469b4
->>>>>>> e00992e36dfd6bf63fbb9806d3126cf01bc456b9
 
 .why-donate {
   display: -webkit-box;
@@ -1866,7 +1840,6 @@ ol.flickity-page-dots {
       width: 12rem;
       border: none;
       -webkit-box-shadow: none;
-<<<<<<< HEAD
               box-shadow: none;
       display: block;
       margin: 0 auto;
@@ -2254,90 +2227,11 @@ ol.flickity-page-dots {
   .home .browse-charity .browse-charity-container {
     width: 100%;
     max-width: 950px; }
-=======
-              box-shadow: none; }
-    .custom-plan .single-custom-plan button {
-      margin-top: -1rem; }
-
-.home .entry-header {
-  padding: 2rem 6rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-  .home .entry-header .header-content {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%; }
-    .home .entry-header .header-content a {
-      width: 8rem;
-      margin: auto 1rem; }
-    .home .entry-header .header-content .donate-page-button {
-      color: #00BEA8;
-      border: 1px solid #00BEA8; }
-
-.home .choose-fund {
-  padding: 2rem 6rem; }
-  .home .choose-fund .choose-fund-subtitle {
-    font-weight: 600; }
-  .home .choose-fund .choose-fund-description {
-    margin: 0 auto; }
-  .home .choose-fund .fund {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: 3rem auto;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-    .home .choose-fund .fund .fund-entry {
-      border-radius: 10px;
-      border: 1px solid #d7d0f2;
-      -webkit-box-shadow: 0px 2px 2px #42299A;
-              box-shadow: 0px 2px 2px #42299A;
-      padding: 1rem;
-      -ms-flex-preferred-size: 30%;
-          flex-basis: 30%;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 60px auto 130px 55px; }
-      .home .choose-fund .fund .fund-entry:hover {
-        -webkit-box-shadow: 0px 3px 5px #42299A;
-                box-shadow: 0px 3px 5px #42299A; }
-      .home .choose-fund .fund .fund-entry img {
-        width: 80px;
-        height: 80px;
-        margin: 0 auto; }
-      .home .choose-fund .fund .fund-entry a {
-        padding: 1rem 1.5rem;
-        background-color: #42299A;
-        border-radius: 7px;
-        width: 10rem;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        color: white;
-        text-align: center;
-        margin: 0 auto; }
 
 /*--------------------------------------------------------------
 # Contact Page
 --------------------------------------------------------------*/
-@media (min-width: 650px) {
+@media (min-width: 600px) {
   .page-template-page-contact .site-content {
     padding: 2rem; } }
 
@@ -2365,7 +2259,7 @@ ol.flickity-page-dots {
     .page-template-page-contact .site-content .post-25 .entry-header h2 {
       color: #14225F;
       margin: 0; }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .page-template-page-contact .site-content .post-25 .entry-header h2 {
           margin: auto;
           font-size: 55px; } }
@@ -2377,7 +2271,7 @@ ol.flickity-page-dots {
     padding: 10px;
     text-align: center;
     font-size: 14px; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 h4 {
         margin-bottom: 4em;
         margin-top: 0;
@@ -2390,18 +2284,18 @@ ol.flickity-page-dots {
     font-style: normal;
     color: #14225F;
     line-height: 16px; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 .contact-text p {
         text-align: center;
         font-size: 20px; } }
   .page-template-page-contact .site-content .post-25 .entry-content p {
     font-style: normal; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 .entry-content p {
         font-size: 20px; } }
     .page-template-page-contact .site-content .post-25 .entry-content p strong {
       font-weight: 600; }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .page-template-page-contact .site-content .post-25 .entry-content p strong {
           text-align: center; } }
   .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column {
@@ -2411,21 +2305,21 @@ ol.flickity-page-dots {
     .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column p:first-child {
       font-weight: normal;
       color: #000; }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column p:first-child {
           text-align: justify; } }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column p:first-child p:last-child {
           text-align: justify; } }
     .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column figure {
       margin: 0;
       display: none; }
-      @media (min-width: 650px) {
+      @media (min-width: 600px) {
         .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column figure {
           display: block; } }
   .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p label {
     font-weight: bold; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p label {
         color: #14225F;
         font-weight: 300; } }
@@ -2450,7 +2344,7 @@ ol.flickity-page-dots {
     width: 150px;
     border-radius: 5px;
     height: 62px; }
-    @media (min-width: 650px) {
+    @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p input[type='submit'] {
         background: #fff;
         color: #14225F;
@@ -2459,7 +2353,7 @@ ol.flickity-page-dots {
 
 .wpcf7-form p:last-of-type {
   text-align: center; }
-  @media (min-width: 650px) {
+  @media (min-width: 600px) {
     .wpcf7-form p:last-of-type {
       text-align: right; } }
 
@@ -2474,4 +2368,3 @@ ol.flickity-page-dots {
     display: -ms-flexbox;
     display: flex;
     width: 100%; }
->>>>>>> f44818300e6d9d747ab2259b34815f4bf98469b4
