--- a/themes/rcforward/sass/_front-page.scss
+++ b/themes/rcforward/sass/_front-page.scss
@@ -289,18 +289,30 @@
        
         @include tablet{
             padding:$content__padding;
-            padding-top:0;
+            // padding-top:0;
         }
+
+            @include display-flex();
+
         
         
                 .fund{
                     text-align: center;
-                    padding-top:3rem;
+                    padding:1rem;
+                    max-width: $max-content-size-mobile;
                     @include display-flex(column);
+                    @include tablet{
+                        max-width:500px;
+                    }
                     @include tablet-large{
+                        padding:0;
+                        padding-top:1rem;
+                        max-width:$max-content-size;
                         @include display-flex();
                         justify-content: space-between;
+
                     }
+
                     h4{
                         color:$innovative__purple;
                         @include display-flex();
