--- a/themes/rcforward/sass/_footer.scss
+++ b/themes/rcforward/sass/_footer.scss
@@ -11,6 +11,7 @@
   }
   .top-footer {
     @include desktop {
+    width: 1200px;
       @include display-flex();
     }
     .footer-site-logo {
@@ -33,9 +34,6 @@
         ul {
           list-style: none;
           @include desktop {
-            & li:nth-child(5n) {
-              display: none;
-            }
             li {
               margin: 2rem 0;
               a {
@@ -60,12 +58,7 @@
         flex-direction: column;
         align-items: flex-start;
       }
-      .footer-maple-leaf {
-        width: 7rem;
-        @include desktop {
-
-        }
-      }
+     
       p {
         display: none;
         @include desktop {
@@ -145,6 +138,13 @@
   .bottom-footer {
     .footer-copyright {
       order: 1;
+      .footer-maple-leaf {
+        width: 5rem;
+        margin: 0 auto;
+        @include desktop {
+
+        }
+      }
       @include desktop {
       }
     }
