--- a/themes/rcforward/sass/_footer.scss
+++ b/themes/rcforward/sass/_footer.scss
@@ -33,9 +33,11 @@
       .menu-footer-menu-container {
         ul {
           list-style: none;
+          padding-left: 3.5rem;
           @include desktop {
             li {
               margin: 2rem 0;
+              width: 9rem;
               a {
                 color: $code__blue;
               }
@@ -53,17 +55,16 @@
       @include desktop {
         order: unset;
         text-align: left;
-        padding-left: 12rem;
+        padding-left: 8rem;
         @include display-flex();
         flex-direction: column;
         align-items: flex-start;
       }
-     
       p {
         display: none;
         @include desktop {
           display: unset;
-          width: 70%;
+          width: 80%;
           line-height: 2rem;
         }
       }
@@ -84,7 +85,8 @@
         flex-direction: column;
         @include desktop {
           order: unset;
-          align-items: flex-start;       
+          align-items: flex-start;    
+          margin-top: 3rem;   
         }
         & p:first-child {
           margin: 1.4rem 0;
@@ -113,10 +115,7 @@
           height: 3rem;
           width: 3rem;
           margin: 0 1rem;
-          @include desktop {
-            height: 4rem;
-            width: 4rem;
-          }
+          
         }
         .facebook {
           background-image: url('../../assets/images/mail.png');
@@ -127,26 +126,25 @@
           height: 3rem;
           width: 3rem;
           margin: 0 1rem;
-          @include desktop {
-            height: 4rem;
-            width: 4rem;
-          }
+        
         }
       }
     }
   }
   .bottom-footer {
+    width: 1200px;
     .footer-copyright {
       order: 1;
       .footer-maple-leaf {
         width: 5rem;
         margin: 0 auto;
         @include desktop {
-
         }
       }
       @include desktop {
+        padding-left: 3.5rem;
       }
+      
     }
   }
 }
